# aitherkvcache

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
aither_kvcache/: __init__.py  bench.py  block_selector.py  codebook.py  eviction_advisor.py  fused_attention.py  fused_kv_update.py  hybrid_quantizer.py  kvcache_graph.py  packing.py  quantizer.py  triton_ops.py
aither_kvcache/triattention/: __init__.py  attention.py  cache.py  calibration.py  config.py  encoder.py  scorer.py  spectral.py
aither_kvcache/vllm/: __init__.py  backend.py  cache.py  engine.py  eviction_plugin.py  hooks.py  plugin.py  sitecustomize.py
notebooks/: vllm_quickstart.ipynb
tests/: test_core.py  test_fused.py  test_hybrid_hooks.py  test_kvcache_graph.py  test_triattention.py
turboquant/: __init__.py  bench.py  block_selector.py  codebook.py  eviction_advisor.py  fused_attention.py  fused_kv_update.py  kvcache_graph.py  packing.py  quantizer.py  rotation.py  triton_ops.py
turboquant/vllm/: __init__.py  backend.py  cache.py  engine.py  hooks.py  sitecustomize.py
