[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aither-kvcache"
version = "0.1.0"
description = "Near-optimal KV cache quantization for LLM inference (arXiv:2504.19874)"
readme = "README.md"
license = "CC-BY-4.0"
requires-python = ">=3.10"
authors = [
    { name = "Aitherium" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
    "numpy",
]

[project.optional-dependencies]
triton = ["triton>=2.0"]
scipy = ["scipy"]
dev = ["pytest"]
all = ["triton>=2.0", "scipy", "pytest"]

[project.urls]
Paper = "https://arxiv.org/abs/2504.19874"
Repository = "https://github.com/Aitherium/aitherkvcache"

[tool.setuptools.packages.find]
include = ["turboquant*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
